# LLMind

./: .dockerignore  .env  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  .prettierrc  .secrets.baseline  Launch LLMind.command  MG Launch.txt  MG roadmap.txt  MLX_PROFILING_SUMMARY.md  README.md  WEB_PROFILING_INTEGRATION_SUMMARY.md  activate_venv.sh  config.py  fix_models_ui.js  fix_voices.py  headers.txt  main.py  mlx_performance_report.json  pyproject.toml  requirements.txt  run_mlx_profiling.py  start_llmind.sh  test_api_endpoints.py
.github/workflows/: ci.yml
.specstory/history/: 2025-07-21_00-50Z-build-a-llamaindex-fastapi-chatbot.md  2025-07-21_02-20Z-remove-unnecessary-files-and-update-readme.md  2025-07-21_04-01Z-profile-mlx-generation-and-optimization.md  2025-07-21_04-24Z-how-fast-is-the-chat-experience.md  2025-07-21_21-11Z-implement-roadmap-with-dspy-and-modular-changes.md  2025-07-21_23-50Z-enhance-chat-history-management-features.md  2025-07-22_03-23Z-web-interface-stuck-at-connecting.md  2025-07-22_04-35Z-edit-chatbot-response-delay-indicator.md  2025-07-22_04-39Z-improve-chatbot-memory-for-interactions.md  2025-07-22_15-08Z-pages-loading-empty-despite-successful-console-message.md  2025-07-22_21-58Z-software-application-issues-and-feedback.md  2025-07-23_20-24Z-model-download-html-layout-issues.md  2025-07-23_22-23Z-model-download-and-settings-issues.md  2025-07-24_17-48Z-model-download-and-empty-tabs-issue.md  2025-07-24_21-48Z-troubleshooting-codebase-issues.md  2025-07-26_17-14Z-model-download-failure-and-traceback.md  2025-07-26_17-25Z-troubleshooting-settings-and-performance-issues.md  2025-07-27_00-30Z-change-app-name-references.md  2025-07-28_13-53Z-complete-codebase-reference-conversion.md
api/: static_routes.py
core/: __init__.py  audio_manager.py  chat_engine.py  document_processor.py  mlx_manager.py  vector_store.py
core/reasoning/: __init__.py  dspy_wrapper.py  hybrid_manager.py
core/reasoning/strategies/: __init__.py  base_strategy.py  chain_of_thought.py  contextual_reasoning.py  fast_path.py  query_decomposition.py  react_strategy.py
data/chat_history/: 216aca45-5f6d-44d3-b4cf-aa649e7440fe.json  23c986dc-0d8f-4c22-bb7a-163c51bae68a.json  49f2ed1f-1180-4f6e-bef2-6db44419559e.json  7336f148-28a8-4392-b03a-aa03a9fb6aa4.json  75f96404-0924-4352-9c25-b6cf3e526703.json  7d37d89d-77ab-45bc-8d43-aa3a70c0f7a8.json  83415058-15b6-4745-95d8-8b001bd76ab9.json  c478a59a-21f6-43fa-8394-71a384c86b81.json  d39a234c-07a7-4dd0-a0c0-ca9667adbc10.json  ff284461-85c6-4ebb-8a1f-ac8864f026e4.json
data/vector_store/: libraries.json
data/vector_store/default/: metadata.pkl
docs/: CI_SETUP.md
documents/: 4021bf9733f825391b65fbbcda8c6d0d_Israel vs. Hamas, Hezbollah, Iran — And Itself.md  e7b535463cac88f7413c41595c371055_test_doc.txt
profiling/: README.md  mlx_optimization_guide.py  mlx_profiler.py
scripts/: build_macos_app.sh  bump_version.py  deploy.sh  dev.sh  run-ci-locally.sh  setup-precommit.sh  setup.sh  start.sh  stop.sh  test.sh  utils.sh
static/: test_fix.html  test_websocket_simple.html
static/css/: style.css
static/js/: app.js  app.js.backup  tab_loader.js
templates/: index.html  index.html.backup
tests/: __init__.py  conftest.py  test_api.py  test_document_processor.py
vector_store/: metadata.pkl
